# python-grpc-sample

./: .pre-commit-config.yaml  README.md  pyproject.toml
grpc-errors/: client.py  server.py
grpc-errors/stub/: hello_pb2.py  hello_pb2_grpc.py
